workspace_1/log/build_2023-07-08_23-38-04/encoder/stdout_stderr.log
running egg_info
writing ../../build/encoder/encoder.egg-info/PKG-INFO
writing dependency_links to ../../build/encoder/encoder.egg-info/dependency_links.txt
writing entry points to ../../build/encoder/encoder.egg-info/entry_points.txt
writing requirements to ../../build/encoder/encoder.egg-info/requires.txt
writing top-level names to ../../build/encoder/encoder.egg-info/top_level.txt
reading manifest file '../../build/encoder/encoder.egg-info/SOURCES.txt'
writing manifest file '../../build/encoder/encoder.egg-info/SOURCES.txt'
running build
running build_py
copying encoder/encoder.py -> /home/ubuntu/ros2_files/workspace_1/build/encoder/build/lib/encoder
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/ubuntu/ros2_files/workspace_1/build/encoder/build/lib/encoder/encoder.py -> /home/ubuntu/ros2_files/workspace_1/install/encoder/lib/python3.10/site-packages/encoder
byte-compiling /home/ubuntu/ros2_files/workspace_1/install/encoder/lib/python3.10/site-packages/encoder/encoder.py to encoder.cpython-310.pyc
  File "/home/ubuntu/ros2_files/workspace_1/install/encoder/lib/python3.10/site-packages/encoder/encoder.py", line 22
    	node.get_logger().info(str(pulse_b)
    	                      ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/ubuntu/ros2_files/workspace_1/install/encoder/lib/python3.10/site-packages/encoder-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/encoder/encoder.egg-info to /home/ubuntu/ros2_files/workspace_1/install/encoder/lib/python3.10/site-packages/encoder-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/ubuntu/ros2_files/workspace_1/build/encoder/install.log'
